[gd_scene load_steps=18 format=3 uid="uid://djfn7qxpknt24"]

[ext_resource type="Texture2D" uid="uid://ddkyrya5ut3kr" path="res://levels/_93945ba8-17c6-4e8b-becd-ea19e77a95a7.jpg" id="1_1iwux"]
[ext_resource type="Script" uid="uid://c7dkna4tolrm3" path="res://lie_detector_test.gd" id="1_v5nae"]
[ext_resource type="Texture2D" uid="uid://d0cnngk5yv6ad" path="res://levels/_4633b9ce-11ed-44ea-bd74-d47bfe199bea.jpg" id="2_1ymgx"]
[ext_resource type="Texture2D" uid="uid://daja2qhvpp5p3" path="res://levels/chariar.png" id="3_h16n8"]
[ext_resource type="Texture2D" uid="uid://cgt32ibbd1cwu" path="res://levels/lightingtexturdoesntgothroughwalls.png" id="4_5jyod"]
[ext_resource type="Script" uid="uid://crx7wa133uiqw" path="res://point_light_2d.gd" id="5_6hmvp"]
[ext_resource type="Texture2D" uid="uid://di21qhh166vbu" path="res://levels/chef2.png" id="6_v5nae"]
[ext_resource type="Texture2D" uid="uid://b43o5d0kl50yx" path="res://levels/chef1.png" id="7_cn5hh"]
[ext_resource type="Texture2D" uid="uid://bvwbdkvunt1po" path="res://levels/chef3.png" id="8_fytmi"]
[ext_resource type="Texture2D" uid="uid://bwti8xcwt8gbb" path="res://levels/thekid.png" id="9_3v81o"]
[ext_resource type="Texture2D" uid="uid://c2s2ulefbym3e" path="res://levels/theclerk.png" id="10_3v81o"]
[ext_resource type="Texture2D" uid="uid://df0jyhurpeqcc" path="res://speechbubble.png" id="11_cn5hh"]
[ext_resource type="Texture2D" uid="uid://dyeybdbwwku4w" path="res://levels/waitress.png" id="11_x2cfm"]
[ext_resource type="Texture2D" uid="uid://d3ndvnba433yg" path="res://polygraph background.png" id="12_fytmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fytmi"]
size = Vector2(15.374069, 164.74557)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3v81o"]

[sub_resource type="Gradient" id="Gradient_x2cfm"]
offsets = PackedFloat32Array(0, 0.047945205, 0.9589041, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="lie detector test" type="Node2D"]
script = ExtResource("1_v5nae")

[node name="93945Ba817c64e8bBecdEa19e77a95a7" type="Sprite2D" parent="."]
self_modulate = Color(0.14767182, 0.14767179, 0.14767179, 1)
texture_repeat = 2
position = Vector2(576.2315, 284.61682)
scale = Vector2(0.38083047, 0.28457966)
texture = ExtResource("1_1iwux")
region_enabled = true
region_rect = Rect2(0, -976, 3024, 2000)

[node name="4633b9Ce11Ed44EaBd74D47Bfe199Bea" type="Sprite2D" parent="."]
self_modulate = Color(0.27022192, 0.27022192, 0.2702219, 1)
texture_repeat = 2
position = Vector2(576.1355, 608.584)
scale = Vector2(0.55375123, 0.81933415)
texture = ExtResource("2_1ymgx")
region_enabled = true
region_rect = Rect2(0, 928, 2080, 96)

[node name="Chariar" type="Sprite2D" parent="."]
self_modulate = Color(0.18359044, 0.18359044, 0.18359044, 1)
position = Vector2(670.29285, 623.3418)
scale = Vector2(1.8190738, 1.9204034)
texture = ExtResource("3_h16n8")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(557.99316, -2.6526756)
rotation = 0.017453292
scale = Vector2(4.239134, 5.821076)
energy = 8.44
texture = ExtResource("4_5jyod")
offset = Vector2(-0.17687988, 9.770957)
script = ExtResource("5_6hmvp")

[node name="Chef2" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.15487596, 0.154876, 0.15487596, 1)
position = Vector2(572.00385, 226.9997)
scale = Vector2(1.7, 1.7)
texture = ExtResource("6_v5nae")

[node name="Chef1" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.2231029, 0.2231029, 0.22310287, 1)
position = Vector2(572.9822, 213.87918)
scale = Vector2(1.8, 1.8)
texture = ExtResource("7_cn5hh")

[node name="Chef3" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.21230483, 0.21230483, 0.21230483, 1)
position = Vector2(576.6391, 242.35876)
scale = Vector2(1.6, 1.6)
texture = ExtResource("8_fytmi")

[node name="Thekid" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.21230483, 0.21230483, 0.21230483, 1)
position = Vector2(576.45105, 255.86761)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_3v81o")

[node name="waitress" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.47007585, 0.47007585, 0.47007585, 1)
self_modulate = Color(0.45452422, 0.45452428, 0.45452422, 1)
position = Vector2(578.3196, 244.50476)
scale = Vector2(1.6, 1.6)
texture = ExtResource("11_x2cfm")

[node name="clerk" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.31431624, 0.3143161, 0.31431603, 1)
position = Vector2(574.36914, 264.05374)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_3v81o")

[node name="suspectselection" type="Node2D" parent="."]

[node name="suspect1 (chef1)" type="Button" parent="suspectselection"]
offset_left = 81.383545
offset_top = 57.9926
offset_right = 189.24261
offset_bottom = 105.936264
text = "Suspect 1"

[node name="suspect2 (chef2)" type="Button" parent="suspectselection"]
offset_left = 81.21005
offset_top = 119.94006
offset_right = 188.96153
offset_bottom = 169.20236
text = "Suspect 2"

[node name="suspect3 (chef3)" type="Button" parent="suspectselection"]
offset_left = 80.875885
offset_top = 188.75131
offset_right = 189.42004
offset_bottom = 239.99423
text = "Suspect 3"

[node name="suspect4 (the kid)" type="Button" parent="suspectselection"]
offset_left = 80.98779
offset_top = 256.04218
offset_right = 189.83511
offset_bottom = 307.57965
text = "Suspect 4"

[node name="suspect5 (the waitress)" type="Button" parent="suspectselection"]
offset_left = 82.67116
offset_top = 320.2847
offset_right = 191.12546
offset_bottom = 373.09842
text = "Suspect 5"

[node name="suspect6 (the clerk)" type="Button" parent="suspectselection"]
offset_left = 82.9241
offset_top = 385.5335
offset_right = 192.5589
offset_bottom = 438.31815
text = "Suspect 6 "

[node name="Node2D" type="Node2D" parent="."]

[node name="question1" type="Button" parent="Node2D"]
offset_left = 465.7998
offset_top = 49.477013
offset_right = 637.1498
offset_bottom = 107.087006
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="question2" type="Button" parent="Node2D"]
offset_left = 647.1816
offset_top = 49.139755
offset_right = 820.0983
offset_bottom = 106.393005
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="question3" type="Button" parent="Node2D"]
offset_left = 284.16815
offset_top = 48.728325
offset_right = 454.98712
offset_bottom = 106.77358
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="Speechbubble" type="Sprite2D" parent="."]
modulate = Color(0.103743516, 0.10374353, 0.103743516, 1)
position = Vector2(700, 140)
texture = ExtResource("11_cn5hh")

[node name="Label" type="Label" parent="."]
offset_left = 576.56494
offset_top = 103.334015
offset_right = 770.9609
offset_bottom = 200.87004
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="."]
top_level = true
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(837.34906, 506.64417)
shape = SubResource("RectangleShape2D_fytmi")

[node name="PolygraphBackground" type="Sprite2D" parent="Area2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(932.90594, 510.51764)
texture = ExtResource("12_fytmi")

[node name="followpoint" type="Node2D" parent="."]
z_index = 10

[node name="CPUParticles2D" type="CPUParticles2D" parent="followpoint"]
position = Vector2(1106.846, 573.7651)
amount = 100
texture = SubResource("PlaceholderTexture2D_3v81o")
lifetime = 5.3
preprocess = 5.3
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 5.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_x2cfm")

[node name="linesgohere" type="Node2D" parent="."]
